# kgdev.me

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
backend/: Cargo.toml  README.md  package-lock.json  package.json  vitest.config.ts  wrangler.jsonc
backend/src/: lib.rs
backend/src/api_worker/: mod.rs
backend/src/api_worker/api/: client.rs  cors.rs  middleware.rs  mod.rs  router.rs
backend/src/api_worker/api/routes/: ask_question.rs  connect_websocket.rs  create_contact_message.rs  mod.rs
backend/src/api_worker/api/schema/: requests.rs  responses.rs
backend/src/api_worker/application/: cache_service.rs  contact_message_service.rs  exceptions.rs  mod.rs
backend/src/api_worker/application/ai_services/: ai_inference_service.rs  blog_qa_service.rs  mod.rs  qa_cache_service.rs  qa_coordinator.rs  sse_event.rs  vectorize_service.rs
backend/src/api_worker/application/contact_services/: contact_message_service.rs  email_service.rs  mod.rs  request_validation_service.rs
backend/src/api_worker/domain/: entity.rs  mod.rs  post_slug.rs
backend/src/api_worker/domain/contact_message/: entity.rs  exceptions.rs
backend/src/api_worker/domain/question/: constants.rs  entity.rs  exceptions.rs  mod.rs
backend/src/api_worker/infrastructure/: durable_object_client.rs  http_client.rs  mod.rs
backend/src/api_worker/infrastructure/cloudflare/: cloudflare_email_service.rs  kv_cache.rs  qa_coordinator_do_service.rs  request_validation_service.rs  vectorize_rest_service.rs  workers_ai_service.rs
backend/src/api_worker/infrastructure/ollama/: inference_service.rs  mod.rs
backend/src/api_worker/infrastructure/services/: cloudflare_email_service.rs  kv_cache.rs  mod.rs  vectorize_rest_service.rs  workers_ai_service.rs
backend/src/api_worker/setup/: app_state.rs  config.rs  exceptions.rs  mod.rs  observability.rs
backend/src/blog_post_qa/: mod.rs  state.rs
backend/src/durable_objects/: mod.rs
backend/src/durable_objects/blog_post_qa/: mod.rs  storage.rs
backend/src/durable_objects/view_counter/: mod.rs  websocket.rs
backend/src/view_counter/: mod.rs  storage.rs
backend/test/: env.d.ts  integration.spec.ts
rag-admin/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  input.css  package.json
rag-admin/data/: manifest.json  post-chunking.json
rag-admin/migrations/: 0001_create_events_table.sql  0001_initial_schema.sql  0002_create_configuration_tables.sql  0002_create_pipeline_configuration_table.sql  0002_indexings_auto_advance.sql  0003_create_source_document_tables.sql  0003_vector_index_records.sql  0004_create_chunk_embedding_indexing_tables.sql  0004_sweep_templates.sql  0005_create_evaluation_tables.sql  0005_kv_store.sql  0006_event_sourcing_infrastructure.sql  0006_split_model_catalogs.sql  0007_pipeline_dimensions_composite_fk.sql
rag-admin/src/: app.rs  base.css  lib.rs  main.rs  server_fns.rs
rag-admin/src/components/: activity.rs  event_bus.rs  layout.rs  log_panel.rs  log_stream.rs  mod.rs
rag-admin/src/components/primitives/: dialog.rs  empty_state.rs  kv.rs  metric_bar.rs  mod.rs  page_header.rs  status_pill.rs  surface.rs  toolbar.rs
rag-admin/src/components/shell/: activity_drawer.rs  app_shell.rs  mod.rs  nav.rs
rag-admin/src/pages/: chunking.rs  embed_test.rs  evaluations.rs  mod.rs  pipelines.rs  playground.rs  post_detail.rs  posts_list.rs  settings.rs
rag-admin/src/pages/configuration/: commands.rs  dialogs.rs  mod.rs
rag-admin/src/pages/document_detail/: chunk_card.rs  chunks_tab.rs  dataset_detail.rs  eval_launcher.rs  eval_parser.rs  evaluation_tab.rs  indexings_tab.rs  mod.rs  redirect_by_id.rs  run_detail.rs  source_tab.rs  utils.rs
rag-admin/src/pages/pipeline_config/: commands.rs  components.rs  dialogs.rs  mod.rs  panels.rs  view.rs
rag-admin/src/pages/post_detail/: chunk_card.rs  evaluation_dialog.rs  evaluation_results.rs  mod.rs  tuning_panel.rs  utils.rs
rag-admin/src/server/: mod.rs
rag-admin/src/server/api/: events_ws.rs  health.rs  mod.rs  sse.rs
rag-admin/src/server/application/: activity.rs  chunker.rs  exceptions.rs  ingest_log.rs  ingest_service.rs  job_registry.rs  mod.rs  test_support.rs
rag-admin/src/server/application/blog/: mod.rs  service.rs
rag-admin/src/server/domain/: aggregate.rs  blog_post.rs  chunk.rs  manifest.rs  mod.rs  post.rs  vector.rs
rag-admin/src/server/event_sourcing/: aggregate.rs  aggregate_repository.rs  checkpoint.rs  command_processor.rs  effect.rs  envelope.rs  event_bus.rs  event_store.rs  mod.rs  policy.rs  process_manager.rs  projection_driver.rs  projector.rs
rag-admin/src/server/infrastructure/: file_manifest.rs  http_blog_source.rs  http_client.rs  mod.rs
rag-admin/src/server/setup/: app_state.rs  config.rs  exceptions.rs  mod.rs  paths.rs  seed.rs  settings.rs  validation.rs
rag-admin/src/server_functions/: chunking.rs  configuration.rs  embed.rs  error.rs  evaluation.rs  ingest.rs  jobs.rs  mod.rs  posts.rs  query.rs  settings.rs  source_document.rs
rag-admin/src/server_functions/schema/: responses.rs
rag-admin/src/shared/: activity.rs  chunking.rs  configuration.rs  configuration_commands.rs  embedding.rs  evaluation.rs  events.rs  ingest.rs  mod.rs  pipeline_configuration.rs  post.rs  query.rs  serde_compat.rs  settings.rs  source_document.rs  vector.rs
rag-admin/src/styles/: global.css
services/contact-service/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
services/contact-service/src/: lib.rs
services/contact-service/src/api/: mod.rs  responses.rs  router.rs
services/contact-service/src/application/: contact_message_service.rs  email_service.rs  exceptions.rs  mod.rs  request_validation_service.rs
services/contact-service/src/domain/: entity.rs  exceptions.rs
services/contact-service/src/infrastructure/: http_client.rs  mod.rs
services/contact-service/src/setup/: app_state.rs  config.rs  exceptions.rs  observability.rs
services/contact-service/test/: env.d.ts  integration.spec.ts
(+612 files in other folders)
