[workspace]
members = [
    "backend",
    "rag-admin",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
time = { version = "0.3", features = ["wasm-bindgen", "serde", "parsing", "formatting"] }
tokio = "1.47.1"
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "json", "env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1.18", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2.108"
wiremock = "0.6.5"
worker = { version = "0.8.1", features = ["d1"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
