[package]
name = "rag-admin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_meta = "0.8"
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

axum = { version = "0.8", optional = true }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "fs"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
time = { version = "0.3", features = ["serde", "formatting", "parsing"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
toml = { version = "0.8", optional = true }
thiserror = "2"

console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:reqwest",
    "dep:sha2",
    "dep:hex",
    "dep:async-trait",
    "dep:futures-util",
    "dep:async-stream",
    "dep:time",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:toml",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "leptos_axum", "reqwest", "sha2", "hex", "async-trait", "futures-util", "async-stream", "time", "tracing", "tracing-subscriber", "toml"]
skip_feature_sets = [["ssr", "hydrate"], []]

[package.metadata.leptos]
output-name = "rag_admin"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "input.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[package.metadata.cargo-machete]
ignored = ["http"]