[package]
name = "kgdev_me_contact_us"
version = "0.1.0"
edition = "2024"
authors = ["Kieran Gray <gray.kieran@protonmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json', 'env-filter'] }
time = { version = "0.3", features = ['wasm-bindgen', 'serde', 'parsing', 'formatting'] }
uuid = { version = "1.18", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2.108"
worker = { version = "0.8.1", features = ['d1'] }

[dev-dependencies]
tokio = "1.47.1"
wiremock = "0.6.5"

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true